Added toasts and links to footer icons
toasts added to menu and product pages when clicking on the "add to cart" buttons

Also renamed the styleguide html file from 'index' to 'styleguide'

--- a/P01-Style Guide/contact.html
+++ b/P01-Style Guide/contact.html
@@ -36,10 +36,9 @@
 <footer class="centered-text equalHW-footer contact-footer">
   	<p>Follow us on social media!</p>
   	<div>
-	  <i class="fab fa-facebook fa-2x"></i>
-	  <i class="fab fa-instagram fa-2x"></i>
-	  <i class="fab fa-twitter-square fa-2x"></i>
-	</div>
+  <i class="fab fa-facebook fa-2x" onclick="location.href='styleguide.html';" value="Go to Styleguide"></i>
+  <i class="fab fa-instagram fa-2x" onclick="location.href='citations.html';" value="Go to Citations page"></i>
+  <i class="fab fa-twitter-square fa-2x" onclick="location.href='https://github.com/dzhog/339P02';" value="Go to Github Repository"></i></div>
 </footer>
 
 
