--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -118,9 +118,8 @@
 <footer class="centered-text equalHW-footer">
 	<p>Follow us on social media!</p>
 	<div>
-	  <i class="fab fa-facebook fa-2x"></i>
-	  <i class="fab fa-instagram fa-2x"></i>
-	  <i class="fab fa-twitter-square fa-2x"></i>
-	</div>
+  <i class="fab fa-facebook fa-2x" onclick="location.href='styleguide.html';" value="Go to Styleguide"></i>
+  <i class="fab fa-instagram fa-2x" onclick="location.href='citations.html';" value="Go to Citations page"></i>
+  <i class="fab fa-twitter-square fa-2x" onclick="location.href='https://github.com/dzhog/339P02';" value="Go to Github Repository"></i></div>
 </footer>
 
