--- a/P01-Style Guide/contact.html
+++ b/P01-Style Guide/contact.html
@@ -19,8 +19,8 @@
     	<i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
 	</nav>
 
-	<div class="center-content">
-		<div class="grid2 contactbody">
+	<div class="column-half center-content">
+		<div class="equalhw">
 			<h2>Contact Us!</h2>
 
 			<input type = "text" name="fn" placeholder="Your Name"><br>
@@ -28,6 +28,24 @@
 			<textarea class="texta" rows="10" cols="50" placeholder="Your Message">
 			</textarea><br><br>
 			<button>Send</button>
+		</div>
+
+		<div class="equalhw no-margin bodyp">
+			<h2>Visit Us!</h2>
+
+			<h3>Location</h3>
+			<p>Suter Brook Village
+				<br>
+			Port Moody, BC<br>
+			(604) 492-3666<br><br></p>
+			<h3>Hours</h3>
+			<p>
+			Monday-Friday: 
+			9 a.m. - 6 p.m.<br>
+			Saturday & Sunday: 
+		9 a.m. - 3 p.m.<br>
+	Holidays: 
+	Closed</p>
 		</div>
 	</div>
 
