Added responsive nav bar in main

--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -13,12 +13,13 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="topnav" id="myTopnav">
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
     <a href="contact.html" class="nav">CONTACT</a>
     <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
   </nav>
 
 
@@ -40,7 +41,6 @@
  <div class="equalHW">
   <img src="menu-img2.jpg">
 </div>
-
 </div>
 
 
@@ -56,6 +56,17 @@
   <i class="fab fa-instagram fa-2x" onclick="location.href='citations.html';" value="Go to Citations page"></i>
   <i class="fab fa-twitter-square fa-2x" onclick="location.href='https://github.com/dzhog/339P02';" value="Go to Github Repository"></i></div>
 </footer>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 
 
 </body>
