--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -13,13 +13,14 @@
 
 
 <body> 
-		<nav>
-			<a href="main.html" class="nav">HOME</a>
-		    <a href="events.html" class="nav">EVENTS</a>
-		    <a href="products.html" class="nav">MENU</a>
-		    <a href="contact.html" class="nav">CONTACT</a>
-		    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
-		</nav>
+		 <nav class="topnav" id="myTopnav">
+    <a href="main.html" class="nav">HOME</a>
+    <a href="events.html" class="nav">EVENTS</a>
+    <a href="products.html" class="nav">MENU</a>
+    <a href="contact.html" class="nav">CONTACT</a>
+    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+  </nav>
 
 		<div id="sidebill" class = billing>
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -106,6 +107,17 @@
 					  document.getElementById("main").style.marginRight = "40rem";
 					}
 				</script>
+
+				<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 	    	</div>
 
     	</div>
