--- a/P01-Style Guide/contact.html
+++ b/P01-Style Guide/contact.html
@@ -21,18 +21,20 @@
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
   </nav>
 
-	<div class="column-half center-content">
-		<div class="equalhw">
+	<div class="column-half center-content marginleft">
+		<div class="equalHW">
 			<h2>Contact Us!</h2>
 
 			<input type = "text" name="fn" placeholder="Your Name"><br>
 			<input type="text" name="fn" placeholder="Subject"><br><br>
-			<textarea class="texta" rows="10" cols="50" placeholder="Your Message">
+			<textarea class="texta" rows="10" cols="300" placeholder="Your Message">
 			</textarea><br><br>
 			<button>Send</button>
+			<br>
+			<br>
 		</div>
 
-		<div class="equalhw no-margin bodyp">
+		<div class="no-margin bodyp equalHW marginleft">
 			<h2>Visit Us!</h2>
 
 			<h3>Location</h3>
@@ -48,7 +50,9 @@
 		9 a.m. - 3 p.m.<br>
 	Holidays: 
 	Closed</p>
+	
 		</div>
+
 	</div>
 
 </body>
