--- a/P01-Style Guide/styleguide.html
+++ b/P01-Style Guide/styleguide.html
@@ -7,10 +7,9 @@
     <title>P01 - Style Guide Template</title>
 
     <link href="css/main.css" rel="stylesheet">
-    <script> window.location.replace('main.html'); </script>
   </head>
 
-  <body>
+  <body class="leftind">
 
     <header>
       <h1>P01 - Style Guide</h1>
@@ -34,10 +33,10 @@
         <h2>Navigation</h2>
 
           <nav>
-            <a href="#" class="nav">HOME</a>
+            <a href="main.html" class="nav">HOME</a>
             <a href="products.html" class="nav">MENU</a>
             <a href="checkout.html" class="nav">CART</a>
-            <a href="#" class="nav">CONTACT</a>
+            <a href="contact.html" class="nav">CONTACT</a>
           </nav>
 
         <code>"&lt;a href="" class="button"&gt;Style Guide&lt;/a&gt;"</code>
