--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -52,6 +52,7 @@
 
             document.getElementById("sidebill").style.visibility = "visible";
             //document.getElementById("main").style.marginLeft = "40rem";
+            document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
             document.getElementById("sidebill").style.transform = "translate(0rem)"
             document.getElementById("sidebill").style.backgroundColor = "rgb(255,244,230)";
 					}
