hamburger menu fix for all pages
hamburger menu now shows responsively on all screens

--- a/P01-Style Guide/contact.html
+++ b/P01-Style Guide/contact.html
@@ -12,7 +12,7 @@
 
 <body> 
 	<body>
-  <nav class="topnav" id="myTopnav">
+  <nav class="topnav" id="myTopnav5">
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
@@ -67,7 +67,7 @@
 
 <script>
 function myFunction() {
-  var x = document.getElementById("myTopnav");
+  var x = document.getElementById("myTopnav5");
   if (x.className === "topnav") {
     x.className += " responsive";
   } else {
