--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -12,7 +12,7 @@
 
 
 <body> 
-		 <nav class="topnav" id="myTopnav">
+	<nav class="topnav" id="myTopnav3">
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
@@ -100,7 +100,7 @@ function myFunction2() {
 
 <script>
 function myFunction() {
-  var x = document.getElementById("myTopnav");
+  var x = document.getElementById("myTopnav3");
   if (x.className === "topnav") {
     x.className += " responsive";
   } else {
