--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -13,7 +13,7 @@
 
 
 <body> 
-		 <nav class="topnav" id="myTopnav">
+		 <nav class="topnav" id="myTopnav4">
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
@@ -60,7 +60,7 @@
 
 				<script>
 function myFunction() {
-  var x = document.getElementById("myTopnav");
+  var x = document.getElementById("myTopnav4");
   if (x.className === "topnav") {
     x.className += " responsive";
   } else {
