--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<nav class="topnav" id="myTopnav">
+<nav class="topnav" id="myTopnav2">
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
@@ -80,7 +80,7 @@
 
 <script>
 function myFunction() {
-  var x = document.getElementById("myTopnav");
+  var x = document.getElementsById("myTopnav2");
   if (x.className === "topnav") {
     x.className += " responsive";
   } else {
