--- a/P01-Style Guide/product-view1.html
+++ b/P01-Style Guide/product-view1.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
- <nav class="topnav" id="myTopnav">
+ <nav class="topnav" id="myTopnav6">
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
@@ -156,7 +156,7 @@ function myFunction2() {
 
 <script>
 function myFunction() {
-  var x = document.getElementById("myTopnav");
+  var x = document.getElementById("myTopnav6");
   if (x.className === "topnav") {
     x.className += " responsive";
   } else {
