--- a/P01-Style Guide/product-view2.html
+++ b/P01-Style Guide/product-view2.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
- <nav class="topnav" id="myTopnav">
+ <nav class="topnav" id="myTopnav7">
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
@@ -157,7 +157,7 @@ function myFunction2() {
 
 <script>
 function myFunction() {
-  var x = document.getElementById("myTopnav");
+  var x = document.getElementById("myTopnav7");
   if (x.className === "topnav") {
     x.className += " responsive";
   } else {
