hamburger menu fix #2

--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -81,7 +81,7 @@
 
 <script>
 function myFunction() {
-  var x = document.getElementsById("myTopnav2");
+  var x = document.getElementById("myTopnav2");
   if (x.className === "topnav") {
     x.className += " responsive";
   } else {
