--- a/P01-Style Guide/product-view2.html
+++ b/P01-Style Guide/product-view2.html
@@ -55,6 +55,14 @@
 </div>
 <div class="select-display">
           <button class="add" onclick="myFunction2()"><i class="fas fa-plus"></i>add to order</button></div>
+          <br>
+          <br>
+          <div class="review centered-text">
+  <h3>Leave a Review</h3>
+  <input name="fn" type="text" placeholder="Name">
+  <textarea class="texta" rows="10" cols="300"></textarea><br><br>
+  <button>Submit</button>
+</div>
         </div>
         <div id="snackbar">Item successfully added to cart!</div>
 </div>
