--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -28,7 +28,7 @@
 
 	        <h2>Your Order</h2>
 	        <div class="item">
-	        	<img src="iced coffee.jpg"> 
+	        	<img src="iced coffee.jpg" alt="Photo of a cup of iced coffee"> 
 	        	<h3> Iced Coffee &nbsp;&nbsp; Size: sml <br><br>
 	        	<button class="edit">edit</button>&nbsp;<button class="remove">remove</button></h3>	    
 	        	<p class="rightalign prices">Price: $2.50</p>
@@ -36,7 +36,7 @@
 	        </div>
 
 	        <div class="item">
-	        	<img src="americano.jpg"> 
+	        	<img src="americano.jpg" alt="Photo of an Americano"> 
 	        	<h3> Classic Americano &nbsp;&nbsp; Size: med <br><br>
 	        	<button class="edit">edit</button>&nbsp;<button class="remove">remove</button></h3>	    
 	        	<p class="rightalign prices">Price: $4.50</p>
