--- a/P01-Style Guide/events.html
+++ b/P01-Style Guide/events.html
@@ -31,14 +31,14 @@
   <button class="event-button">VIEW DETAILS</button>
 </div>
  <div class="equalHW" id="block2">
-  <img src="event1.jpg">
+  <img src="event1.jpg" alt="Photo of barista pouring coffee in a ceramic coffee cup">
 </div>
 </div>
 
 <!-- event with left image -->
 <div class="column-half">
   <div class="equalHW" id="block3">
-  <img src="event2.jpg">
+  <img src="event2.jpg" alt="Photo of french press and coffe cup/beans on a table">
 </div>
   <div class="equalHW centered-text" id="block4">
     <h3>The World Brewers Cup</h3>
@@ -55,14 +55,14 @@
   <button class="event-button">VIEW DETAILS</button>
 </div>
  <div class="equalHW" id="block6">
-  <img src="event3.jpg">
+  <img src="event3.jpg" alt="Photo of a coffee related alcoholic shot">
 </div>
 </div>
 
 <!-- event with left image -->
 <div class="column-half">
   <div class="equalHW" id="block7">
-  <img src="event4.jpg">
+  <img src="event4.jpg" alt="Photo of latte art depicting a tree with a sunset in the background">
 </div>
   <div class="equalHW centered-text" id="block8">
     <h3>World Latte Art Championship</h3>
