--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -25,7 +25,7 @@
 
 
   <div class="homesplash">
-    <img src="menu-img.jpg">
+    <img src="menu-img.jpg" alt="Photo of a cup of coffee">
     <p> <strong>Introduction</strong> <br><br>
     Our coffeehouses and delivery services have become a beacon for coffee lovers everywhere. People know they can count on genuine service, an inviting atmosphere and a superb cup of expertly roasted and richly brewed coffee every time.</p>
   </div>
@@ -40,13 +40,13 @@
 
 
  <div class="equalHW">
-  <img src="menu-img2.jpg">
+  <img src="menu-img2.jpg" alt="Photo of person pouring a latte">
 </div>
 </div>
 
 
 <div class="homebotbanner">
-  <img src="banner-img.jpg">
+  <img src="banner-img.jpg" alt="Photo of many different coffee drinks in a row">
   <button>View Upcoming Events</button>
 </div>
 
