--- a/P01-Style Guide/product-view1.html
+++ b/P01-Style Guide/product-view1.html
@@ -24,7 +24,7 @@
 
   <div class="column-half">
     <div class="equalHW">
-      <img src="americano.jpg">
+      <img src="americano.jpg" alt="Photo of an Americano">
     </div>
 
   <div class="equalHW centered-text">
