--- a/P01-Style Guide/product-view2.html
+++ b/P01-Style Guide/product-view2.html
@@ -24,7 +24,7 @@
 
   <div class="column-half">
     <div class="equalHW">
-      <img src="latte.jpg">
+      <img src="latte.jpg" alt="Photo of a latte">
     </div>
 
   <div class="equalHW centered-text">
