--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -25,7 +25,7 @@
 		<div class="grid">
 			<h2>Classic Americano</h2> 
             <div class="crop-image">
-        	<img src="americano.jpg" class="linkimage" onclick="location.href='product-view1.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
+        	<img src="americano.jpg" class="linkimage" onclick="location.href='product-view1.html';" alt="Photo of an Americano "><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
   
         <div class="select-display">
         	<button class="add" onclick="myFunction2()"><i class="fas fa-plus"></i>add to order</button></div>
@@ -35,7 +35,7 @@
         <div class="grid">
         	<h2>Latte</h2>
             <div class="crop-image">
-        	<img src="latte.jpg" class="linkimage" onclick="location.href='product-view2.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
+        	<img src="latte.jpg" class="linkimage" onclick="location.href='product-view2.html';" alt="Photo of a latte"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
              <div class="select-display">
         	<button class="add" onclick="myFunction2()"><i class="fas fa-plus" ></i>add to order</button></div>
@@ -44,7 +44,7 @@
         <div class="grid">
         	<h2>Cappuccino</h2>
             <div class="crop-image">
-        	<img src="coffee.jpg" class="linkimage" onclick="location.href='product-view1.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
+        	<img src="coffee.jpg" class="linkimage" onclick="location.href='product-view1.html';" alt="Photo of a cup of coffee"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
         	 <div class="select-display">
         	<button class="add" onclick="myFunction2()"><i class="fas fa-plus"></i>add to order</button></div>
@@ -54,7 +54,7 @@
 			<h2>Mocha</h2>
 
             <div class="crop-image">
-        	<img src="mocha.jpg" class="linkimage" onclick="location.href='product-view2.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
+        	<img src="mocha.jpg" class="linkimage" onclick="location.href='product-view2.html';" alt="Photo of a Mocha"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
             <div class="select-display">
         	<button class="add" onclick="myFunction2()"><i class="fas fa-plus"></i>add to order</button></div>
@@ -64,7 +64,7 @@
         	<h2>Iced Coffee</h2>
 
             <div class="crop-image">
-        	<img src="iced coffee.jpg" class="linkimage" onclick="location.href='product-view1.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
+        	<img src="iced coffee.jpg" class="linkimage" onclick="location.href='product-view1.html';" alt="Photo of a cup of iced coffee"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
             <div class="select-display">
         	<button class="add" onclick="myFunction2()"><i class="fas fa-plus"></i>add to order</button></div>
@@ -74,7 +74,7 @@
         	<h2>Coffee</h2>
 
             <div class="crop-image">
-        	<img src="black.jpg" class="linkimage" onclick="location.href='product-view2.html';"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
+        	<img src="black.jpg" class="linkimage" onclick="location.href='product-view2.html';" alt="Photo of coffee"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
             <div class="select-display">
         	<button class="add" onclick="myFunction2()"><i class="fas fa-plus"></i>add to order</button></div>
