--- a/P01-Style Guide/main.html
+++ b/P01-Style Guide/main.html
@@ -26,7 +26,7 @@
 
   <div class="homesplash">
     <img src="menu-img.jpg" alt="Photo of a cup of coffee">
-    <p> <strong>Introduction</strong> <br><br>
+    <p> <strong>Welcome!</strong> <br><br>
     Our coffeehouses and delivery services have become a beacon for coffee lovers everywhere. People know they can count on genuine service, an inviting atmosphere and a superb cup of expertly roasted and richly brewed coffee every time.</p>
   </div>
 
