Made all pages responsive for small screens, added toast for checkout

--- a/P01-Style Guide/product-view2.html
+++ b/P01-Style Guide/product-view2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 
-  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Latte</title>
 
 <!-- link reference to font awesome icons online -->
@@ -18,7 +18,7 @@
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
     <a href="contact.html" class="nav">CONTACT</a>
-    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
+    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';"></i>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
   </nav>
 
@@ -73,9 +73,9 @@
 <footer class="centered-text equalHW-footer">
   <p>Follow us on social media!</p>
  <div>
-  <i class="fab fa-facebook fa-2x" onclick="location.href='styleguide.html';" value="Go to Styleguide"></i>
-  <i class="fab fa-instagram fa-2x" onclick="location.href='citations.html';" value="Go to Citations page"></i>
-  <i class="fab fa-twitter-square fa-2x" onclick="location.href='https://github.com/dzhog/339P02';" value="Go to Github Repository"></i></div>
+  <i class="fab fa-facebook fa-2x" onclick="location.href='styleguide.html';"></i>
+  <i class="fab fa-instagram fa-2x" onclick="location.href='citations.html';"></i>
+  <i class="fab fa-twitter-square fa-2x" onclick="location.href='https://github.com/dzhog/339P02';"></i></div>
 </footer>
 
 
