--- a/P01-Style Guide/checkout.html
+++ b/P01-Style Guide/checkout.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 <head>
-	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>P01 - Style Guide Template</title>
 
 	<!-- link reference to font awesome icons online -->
@@ -13,12 +13,12 @@
 
 
 <body> 
-		 <nav class="topnav" id="myTopnav4">
+	<nav class="topnav" id="myTopnav4">
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
     <a href="products.html" class="nav">MENU</a>
     <a href="contact.html" class="nav">CONTACT</a>
-    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';" value="Go to Checkout"></i>
+    <i class="fas fa-shopping-cart nav-icon" onclick="location.href='checkout.html';"></i>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
   </nav>
 
@@ -126,7 +126,8 @@ function myFunction() {
             <option value="2028">2028</option>
           </select><br><br>
        
-          <button class="rightalignbutt">Pay</button>
+          <button class="rightalignbutt" onclick="myFunction2()">Pay</button>
+          <div id="snackbar">Item successfully added to cart!</div>
         </div>
     	</div>
 
@@ -134,13 +135,19 @@ function myFunction() {
     	
 	</body>
 
-
+<script>
+function myFunction2() {
+  var x = document.getElementById("snackbar");
+  x.className = "show";
+  setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+}
+</script>
 
 <footer id="foot" class="centered-text equalHW-footer">
 	<p>Follow us on social media!</p>
 	<div>
-  <i class="fab fa-facebook fa-2x" onclick="location.href='styleguide.html';" value="Go to Styleguide"></i>
-  <i class="fab fa-instagram fa-2x" onclick="location.href='citations.html';" value="Go to Citations page"></i>
-  <i class="fab fa-twitter-square fa-2x" onclick="location.href='https://github.com/dzhog/339P02';" value="Go to Github Repository"></i></div>
+  <i class="fab fa-facebook fa-2x" onclick="location.href='styleguide.html';"></i>
+  <i class="fab fa-instagram fa-2x" onclick="location.href='citations.html';"></i>
+  <i class="fab fa-twitter-square fa-2x" onclick="location.href='https://github.com/dzhog/339P02';"></i></div>
 </footer>
 
