--- a/P01-Style Guide/contact.html
+++ b/P01-Style Guide/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>P01 - Style Guide Template</title>
 
@@ -11,7 +12,6 @@
 </head>
 
 <body> 
-	<body>
   <nav class="topnav" id="myTopnav5">
     <a href="main.html" class="nav">HOME</a>
     <a href="events.html" class="nav">EVENTS</a>
@@ -54,9 +54,6 @@
 		</div>
 
 	</div>
-
-</body>
-
 <footer class="centered-text equalHW-footer contact-footer">
   	<p>Follow us on social media!</p>
   	<div>
@@ -64,7 +61,6 @@
   <i class="fab fa-instagram fa-2x" onclick="location.href='citations.html';"></i>
   <i class="fab fa-twitter-square fa-2x" onclick="location.href='https://github.com/dzhog/339P02';"></i></div>
 </footer>
-
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav5");
@@ -75,3 +71,8 @@ function myFunction() {
   }
 }
 </script>
+</body>
+
+
+
+
