--- a/P01-Style Guide/product-view1.html
+++ b/P01-Style Guide/product-view1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Classic Americano</title>
 
@@ -70,7 +70,7 @@
 
 <div id="snackbar">Item successfully added to cart!</div>
 
-</div>
+
 
 </div>
 
