--- a/P01-Style Guide/product-view2.html
+++ b/P01-Style Guide/product-view2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Latte</title>
 
@@ -65,7 +65,6 @@
 </div>
         </div>
         <div id="snackbar">Item successfully added to cart!</div>
-</div>
 </div>
   
 
