--- a/P01-Style Guide/products.html
+++ b/P01-Style Guide/products.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>P01 - Style Guide Template</title>
 
@@ -63,7 +64,7 @@
         	<h2>Iced Coffee</h2>
 
             <div class="crop-image">
-        	<img src="iced coffee.jpg" class="linkimage" onclick="location.href='product-view1.html';" alt="Photo of a cup of iced coffee"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
+        	<img src="iced%20coffee.jpg" class="linkimage" onclick="location.href='product-view1.html';" alt="Photo of a cup of iced coffee"><!-- image from: https://www.nespresso.com/recipes/int/en/19816AME-americano-by-nespresso.html--></div>
 
             <div class="select-display">
         	<button class="add" onclick="myFunction2()"><i class="fas fa-plus"></i>add to order</button></div>
